# FinCalculator

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: accounts.rs  backup.rs  banks.rs  categories.rs  financial_goals.rs  flows.rs  goals.rs  household.rs  mod.rs  recurring.rs  reports.rs  transactions.rs  users.rs
src-tauri/src/db/: connection.rs  mod.rs  schema.rs
src-tauri/src/models/: account.rs  backup.rs  bank.rs  category.rs  financial_goals.rs  flow.rs  goal.rs  goals.rs  household.rs  mod.rs  recurring.rs  tag.rs  transaction.rs  user.rs
src-tauri/src/utils/: error.rs
src/components/accounts/: AccountCard.tsx  AccountList.tsx
src/components/dashboard/: BalanceWidget.tsx  CashFlowChart.tsx
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/components/transactions/: TransactionList.tsx  (+1 more)
src/hooks/: useAccounts.ts  useBanks.ts  useBanksAccounts.ts  useBudget.ts  useCategories.ts  useDatabase.ts  useGoals.ts  useHousehold.ts  useReports.ts  useTransactions.ts  useTransfers.ts  useUsers.ts
src/lib/: api.ts  tauri.ts
src/pages/: Accounts.tsx  Banks.tsx  BanksAccounts.tsx  Budgets.tsx  Categories.tsx  Dashboard.tsx  Expenses.tsx  Flows.tsx  Goals.tsx  Members.tsx  MoneyFlow.tsx  Recurring.tsx  Reports.tsx  Settings.tsx  Transactions.tsx
src/stores/: filterStore.ts  settingsStore.ts
src/types/: accounts.ts  budget.ts  index.ts
src/utils/: currency.ts  date.ts
(+4 files in other folders)
